--- a/index.html
+++ b/index.html
@@ -31,19 +31,31 @@
             <section class="fonctionnement">
                 <h2 class="fonctionnement__title">Fonctionnement</h2>
                 <div class="btn-acceuil">
-                        <div class="btn-acceuil__menu">
-                            <p class="number">1</p>
-                            <i class="fa-solid fa-mobile-screen-button color"></i>
-                            <strong class="text-number">Choisissez un restaurant</strong>
-                        </div>
-                        <div class="btn-acceuil__menu">
-                            <p class="number">2</p>
-                            <i class="fa-solid fa-list color"></i><strong>Composez votre menu</strong>
-                        </div>
-                        <div class="btn-acceuil__menu btn-acceuil__menu--3">
-                            <p class="number">3</p>
-                            <i class="fa-solid fa-store color color--3"></i><strong>Dégustez au restaurant</strong>
-                        </div>
+                    <ul>
+                        <li>
+                            <div class="btn-acceuil__menu">
+                                <p class="number">1</p>
+                                <i class="fa-solid fa-mobile-screen-button color"></i>
+                                <strong class="text-number">Choisissez un restaurant</strong>
+                            </div>
+                        </li>
+                    </ul>
+                    <ul>
+                        <li>
+                            <div class="btn-acceuil__menu">
+                                <p class="number">2</p>
+                                <i class="fa-solid fa-list color"></i><strong>Composez votre menu</strong>
+                            </div>
+                        </li>
+                    </ul>
+                    <ul>
+                        <li>
+                            <div class="btn-acceuil__menu btn-acceuil__menu--3">
+                                <p class="number">3</p>
+                                <i class="fa-solid fa-store color color--3"></i><strong>Dégustez au restaurant</strong>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
             </section>
             <section class="list-resto">
@@ -55,8 +67,10 @@
                                 <p class="nouveau">Nouveau</p>
                                 <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="restaurant__photo" alt="resto">
                                 <figcaption class="restaurant__nom">
-                                        <i class="fa-regular fa-heart heart border-heart"></i>
-                                        <i class="fa-solid fa-heart heart heart-colorer"></i>
+                                    <div class="heart-div">
+                                        <i class="fa-regular fa-heart border-heart"></i>
+                                        <i class="fa-solid fa-heart heart-colorer"></i>
+                                    </div>
                                     <h4>La palette du goût</h4>
                                     <h5>Ménilmontant</h5>
                                 </figcaption>
@@ -69,8 +83,10 @@
                                 <p class="nouveau">Nouveau</p>
                                 <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" class="restaurant__photo" alt="resto">
                                 <figcaption class="restaurant__nom">
-                                    <i class="fa-regular fa-heart heart border-heart"></i>
-                                    <i class="fa-solid fa-heart heart heart-colorer"></i>
+                                    <div class="heart-div">
+                                        <i class="fa-regular fa-heart border-heart"></i>
+                                        <i class="fa-solid fa-heart heart-colorer"></i>
+                                    </div>
                                     <h4>La note enchantée</h4>
                                     <h5>Charonne</h5>
                                 </figcaption>
@@ -82,8 +98,10 @@
                             <figure class="restaurant__cards">
                                 <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="restaurant__photo" alt="resto">
                                 <figcaption class="restaurant__nom">
-                                    <i class="fa-regular fa-heart heart border-heart"></i>
-                                    <i class="fa-solid fa-heart heart heart-colorer"></i>
+                                    <div class="heart-div">
+                                        <i class="fa-regular fa-heart border-heart"></i>
+                                        <i class="fa-solid fa-heart heart-colorer"></i>
+                                    </div>
                                     <h4>À la française</h4>
                                     <h5>Cité Rouge</h5>
                                 </figcaption>
@@ -95,8 +113,10 @@
                             <figure class="restaurant__cards">
                                 <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" class="restaurant__photo" alt="resto">
                                 <figcaption class="restaurant__nom">
-                                    <i class="fa-regular fa-heart heart border-heart"></i>
-                                    <i class="fa-solid fa-heart heart heart-colorer"></i>
+                                    <div class="heart-div">
+                                        <i class="fa-regular fa-heart border-heart"></i>
+                                        <i class="fa-solid fa-heart heart-colorer"></i>
+                                    </div>
                                     <h4>Le délice des sens</h4>
                                     <h5>Folie-Méricourt</h5>
                                 </figcaption>
