--- a/index.html
+++ b/index.html
@@ -9,57 +9,47 @@
         <title>Ohmyfood - Accueil</title>
     </head>
     <body>
-        <header class="header">
-                <img class="header__logo" src="images/logo/ohmyfood.png" alt="logo-resto">
+        <header>
+            <h1 class="header-title">ohmyfood</h1>
         </header>
         
 
         <main>
             <div class="formulaire">
-                <form method="post" action="#">
-                    <div class="recherche">
+                <form method="post" action="#" class="recherche">
                         <label for="adresse" class="location"><i class="fa-sharp fa-solid fa-location-dot" ></i></label>
                         <input type="search" id="adresse" name="adresse" placeholder="Paris, Belleville" class="recherche__adresse">
-                    </div>
-                </form>
+                    </form>
             </div>
             <section class="explorer-restos">
-                    <h1 class="explorer-restos__title">Réservez le menu qui vous convient</h1>
+                    <h2 class="explorer-restos__title">Réservez le menu qui vous convient</h2>
                     <p class="explorer-restos__subtitle">Découvrez des restaurants d'exception, selectionnés par nos soins.</p>
-                        <button class="btn-explorez">Explorer nos restaurants</button>
+                    <button class="btn-explorez">Explorer nos restaurants</button>
             </section>
             <section class="fonctionnement">
                 <h2 class="fonctionnement__title">Fonctionnement</h2>
-                <div class="btn-acceuil">
+                <div class="fonctionnement__site">
                     <ul>
-                        <li>
-                            <div class="btn-acceuil__menu">
-                                <p class="number">1</p>
-                                <i class="fa-solid fa-mobile-screen-button color"></i>
-                                <strong class="text-number">Choisissez un restaurant</strong>
-                            </div>
+                        <li class="explication">
+                            <p class="explication__number">1</p>
+                            <i class="fa-solid fa-mobile-screen-button explication__icon"></i>
+                            <strong class="explication__text">Choisissez un restaurant</strong>
                         </li>
-                    </ul>
-                    <ul>
-                        <li>
-                            <div class="btn-acceuil__menu">
-                                <p class="number">2</p>
-                                <i class="fa-solid fa-list color"></i><strong>Composez votre menu</strong>
-                            </div>
+                        <li class="explication">
+                            <p class="explication__number">2</p>
+                            <i class="fa-solid fa-list explication__icon"></i>
+                            <strong class="explication__text">Composez votre menu</strong>
                         </li>
-                    </ul>
-                    <ul>
-                        <li>
-                            <div class="btn-acceuil__menu btn-acceuil__menu--3">
-                                <p class="number">3</p>
-                                <i class="fa-solid fa-store color color--3"></i><strong>Dégustez au restaurant</strong>
-                            </div>
+                        <li class="explication explication--3">
+                            <p class="explication__number">3</p>
+                            <i class="fa-solid fa-store explication__icon explication__icon--3"></i>
+                            <strong class="explication__text">Dégustez au restaurant</strong>
                         </li>
                     </ul>
                 </div>
             </section>
             <section class="list-resto">
-                <h2>Restaurants</h2>
+                <h3>Restaurants</h3>
                 <div class="restaurant">
                     <article class="restaurant__article">
                         <a href="la_palette_du_gout.html">
@@ -67,72 +57,72 @@
                                 <p class="nouveau">Nouveau</p>
                                 <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="restaurant__photo" alt="resto">
                                 <figcaption class="restaurant__nom">
-                                    <div class="heart-div">
-                                        <i class="fa-regular fa-heart border-heart"></i>
-                                        <i class="fa-solid fa-heart heart-colorer"></i>
-                                    </div>
                                     <h4>La palette du goût</h4>
                                     <h5>Ménilmontant</h5>
                                 </figcaption>
                             </figure>
                         </a>
+                        <button class="heart">
+                            <i class="fa-regular fa-heart border-heart"></i>
+                            <i class="fa-solid fa-heart heart-colorer"></i>
+                        </button>
                     </article>
                     <article class="restaurant__article">
-                        <a href="#">
+                        <a href="la_note_enchantee.html">
                             <figure class="restaurant__cards">
                                 <p class="nouveau">Nouveau</p>
                                 <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" class="restaurant__photo" alt="resto">
                                 <figcaption class="restaurant__nom">
-                                    <div class="heart-div">
-                                        <i class="fa-regular fa-heart border-heart"></i>
-                                        <i class="fa-solid fa-heart heart-colorer"></i>
-                                    </div>
                                     <h4>La note enchantée</h4>
                                     <h5>Charonne</h5>
                                 </figcaption>
                             </figure>
                         </a>
+                        <button class="heart">
+                            <i class="fa-regular fa-heart border-heart"></i>
+                            <i class="fa-solid fa-heart heart-colorer"></i>
+                        </button>
                     </article>
                     <article class="restaurant__article">
-                        <a href="#">
+                        <a href="a_la_francaise.html">
                             <figure class="restaurant__cards">
                                 <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="restaurant__photo" alt="resto">
                                 <figcaption class="restaurant__nom">
-                                    <div class="heart-div">
-                                        <i class="fa-regular fa-heart border-heart"></i>
-                                        <i class="fa-solid fa-heart heart-colorer"></i>
-                                    </div>
                                     <h4>À la française</h4>
                                     <h5>Cité Rouge</h5>
                                 </figcaption>
                             </figure>
                         </a>
+                        <button class="heart">
+                            <i class="fa-regular fa-heart border-heart"></i>
+                            <i class="fa-solid fa-heart heart-colorer"></i>
+                        </button>
                     </article>
                     <article class="restaurant__article">
-                        <a href="#">
+                        <a href="le_delice_des_sens.html">
                             <figure class="restaurant__cards">
                                 <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" class="restaurant__photo" alt="resto">
                                 <figcaption class="restaurant__nom">
-                                    <div class="heart-div">
-                                        <i class="fa-regular fa-heart border-heart"></i>
-                                        <i class="fa-solid fa-heart heart-colorer"></i>
-                                    </div>
                                     <h4>Le délice des sens</h4>
                                     <h5>Folie-Méricourt</h5>
                                 </figcaption>
                             </figure>
                         </a>
+                        <button class="heart">
+                            <i class="fa-regular fa-heart border-heart"></i>
+                            <i class="fa-solid fa-heart heart-colorer"></i>
+                        </button>
                     </article>
                 </div>
             </section>
         </main>
       
         <footer class="footer">
-            <h6 class="footer__title">ohmyfood</h6>
+            <p class="footer__title">ohmyfood</p>
             <nav>
                 <ul class="menu-footer">
-                    <li class="menu-footer__link menu-footer__link--icon"><i class="fa-solid fa-utensils"></i><a>Proposer un restaurant</a></li>
-                    <li class="menu-footer__link menu-footer__link--icon"><i class="fa-solid fa-handshake-angle"></i><a>Devenir partenaire</a></li>
+                    <li class="menu-footer__link menu-footer__link--icon"><a><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
+                    <li class="menu-footer__link menu-footer__link--icon"><a><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a></li>
                     <li class="menu-footer__link"><a>Mentions légales</a></li>
                     <li class="menu-footer__link"><a href="mailto:contact-ohmyfood@gmail.com">Contact</a></li>
                 </ul>
